# routes/admin.js
@@ -12,6 +12,72 @@ const adminSecretKey = process.env.ADMIN_SECRET_KEY || "";
 
 const authorize = require('../middlewares/roleBasedAccessControl');
 
+router.post("/BulkCreateTeams", authorize(['inspector_coordinator']), async (req, res) => {
+    // #swagger.tags = ['admin']
+    // #swagger.description = 'Endpoint to create teams. Requires admin secret key for authorization.'
+    // #swagger.parameters['admin-secret-key'] = {
+    //     in: 'header',
+    //     description: 'Admin secret key for authentication',
+    //     type: 'string',
+    //     required: true
+    // }
+    // #swagger.responses[201] = { description: 'Teams created successfully.' }
+    // #swagger.responses[400] = { description: 'Teams already exist.' }
+    // #swagger.responses[403] = { description: 'Unauthorized access.' }
+    // #swagger.responses[500] = { description: 'Failed to create teams.' }
+    try {
+        const payloadAdminSecretKey = req.headers['admin-secret-key'];
+
+        if (!payloadAdminSecretKey || adminSecretKey !== payloadAdminSecretKey) {
+            return res.status(403).send("Unauthorized access.");
+        }
+
+        // Add teams manually in the following format
+        const teams = [
+            { teamNumber: 1, name: "Team 1", state: "State 1" },
+            { teamNumber: 2, name: "Team 2", state: "State 2" },
+            { teamNumber: 3, name: "Team 3", state: "State 3" },
+        ]
+
+        // Save the teams to the database
+        await teamsService.saveTeams(teams);
+
+        res.status(201).send("Teams created successfully");
+
+    } catch (error) {
+        console.error(error.message);
+        res.status(500).send("Failed to create teams");
+    }
+});
+
+router.delete("/DeleteAllTeams", authorize(['inspector_coordinator']), async (req, res) => {
+    // #swagger.tags = ['admin']
+    // #swagger.description = 'Endpoint to delete all teams. Requires admin secret key for authorization.'
+    // #swagger.parameters['admin-secret-key'] = {
+    //     in: 'header',
+    //     description: 'Admin secret key for authentication',
+    //     type: 'string',
+    //     required: true
+    // }
+    // #swagger.responses[200] = { description: 'All teams deleted successfully.' }
+    // #swagger.responses[400] = { description: 'Teams table is already empty.' }
+    // #swagger.responses[403] = { description: 'Unauthorized access.' }
+    // #swagger.responses[500] = { description: 'Failed to delete all teams.' }
+    try {
+        const payloadAdminSecretKey = req.headers['admin-secret-key'];
+
+        if (!payloadAdminSecretKey || adminSecretKey !== payloadAdminSecretKey) {
+            return res.status(403).send("Unauthorized access.");
+        }
+        await teamsService.deleteAllTeams();
+        res.status(200).send("All teams deleted successfully");
+
+    } catch (error) {
+        console.error(error.message);
+        res.status(500).send("Failed to delete all teams");
+    }
+});
+
 router.get("/CreateCleanSheetsForTeams", authorize(['inspector_coordinator']), async (req, res) => {
     // #swagger.tags = ['admin']
     // #swagger.description = 'Endpoint to create clean sheets for all teams. Requires admin secret key for authorization.'
@@ -57,6 +123,41 @@ router.get("/CreateCleanSheetsForTeams", authorize(['inspector_coordinator']), a
     } catch (error) {
         console.error(error.message);
         res.status(500).send("Failed to create clean sheets for teams");
+    }
+});
+
+router.delete("/DeleteAllInspections", authorize(['inspector_coordinator']), async (req, res) => {
+    // #swagger.tags = ['admin']
+    // #swagger.description = 'Endpoint to delete all inspections. Requires admin secret key for authorization.'
+    // #swagger.parameters['admin-secret-key'] = {
+    //     in: 'header',
+    //     description: 'Admin secret key for authentication',
+    //     type: 'string',
+    //     required: true
+    // }
+    // #swagger.responses[200] = { description: 'All inspections deleted successfully.' }
+    // #swagger.responses[400] = { description: 'Inspections table is already empty.' }
+    // #swagger.responses[403] = { description: 'Unauthorized access.' }
+    // #swagger.responses[500] = { description: 'Failed to delete all inspections.' }
+    try {
+        const payloadAdminSecretKey = req.headers['admin-secret-key'];
+
+        if (!payloadAdminSecretKey || adminSecretKey !== payloadAdminSecretKey) {
+            return res.status(403).send("Unauthorized access.");
+        }
+
+        const existingInspectionsCount = await inspectionModel.countDocuments();
+
+        if (existingInspectionsCount === 0) {
+            return res.status(400).send("Inspections table is already empty.");
+        }
+
+        await inspectionModel.deleteMany();
+        res.status(200).send("All inspections deleted successfully");
+
+    } catch (error) {
+        console.error(error.message);
+        res.status(500).send("Failed to delete all inspections");
     }
 });
 
