# routes/teams.js
@@ -4,6 +4,8 @@ var router = express.Router();
 
 const teamsService = new TeamsService();
 
+const authorize = require('../middlewares/roleBasedAccessControl');
+
 router.get("/", async (req, res) => {
     // #swagger.tags = ['Teams']
     // #swagger.description = 'Endpoint to retrieve a list of all teams.'
@@ -18,6 +20,35 @@ router.get("/", async (req, res) => {
     } catch (error) {
         console.error(error);
         res.status(500).send("An error occurred while fetching teams.");
+    }
+});
+
+router.get("/:teamNumber", authorize(['inspector', 'inspector_coordinator']), async (req, res, next) => {
+    // Get Team
+    // #swagger.tags = ['Team Individually']
+    // #swagger.description = 'Retrieves a team based on the team number.'
+    // #swagger.parameters['teamNumber'] = { description: 'Team number', required: true }
+    // #swagger.responses[200] = { description: 'Team found.', schema: { $ref: "#/definitions/Inspection" } }
+    // #swagger.responses[404] = { description: 'Team not found.' }
+    // #swagger.responses[500] = { description: 'Error occurred while retrieving the team.' }
+
+    try {
+        var team = await teamsService.getTeam(req.params.teamNumber);
+
+        if (!team) {
+            return res.status(404).json({
+                message: "Team not found.",
+                status: 404
+            });
+        }
+
+        res.status(200).json(team);
+    } catch (err) {
+        console.log(err);
+        res.status(500).json({
+            message: "An error occurred while retrieving the team.",
+            status: 500
+        });
     }
 });
 
